# openge

./: .gitlab-ci.yml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  conanfile.py
.github/workflows/: docker-deploy.yml  docker-qa.yml  docker.yml  main.yml
include/openge/: Camera.hpp  Color.hpp  ColorConstants.hpp  Component.hpp  CoordinateSystem.hpp  Exception.hpp  GLBuffer.hpp  GLShader.hpp  GLShaderProgram.hpp  GLTexture.hpp  GLVertexArrayObject.hpp  GameObject.hpp  GameObjectImpl.hpp  Image.hpp  InputSystem.hpp  Light.hpp  Lua.hpp  LuaImpl.hpp  Material.hpp  Mesh.hpp  OpenGLFactory.hpp  RenderPipeline.hpp  ScriptingEngine.hpp  Shader.hpp  Skybox.hpp  Space.hpp  Transform.hpp
include/openge/impl/: Component.hpp  GameObject.hpp  InputSystem.hpp
mock/openge/: ScriptingEngineMock.hpp
platform/: CMakeLists.txt
platform/android/: CMakeLists.txt
platform/android/include/openge/: Asset.hpp  AssetManager.hpp  Color.hpp  File.hpp  GLBuffer.hpp  GLFunctions.hpp  GLShader.hpp  GLShaderProgram.hpp  GLTexture.hpp  GLVertexArrayObject.hpp  Image.hpp  KeyEvent.hpp  Log.hpp  MouseEvent.hpp
platform/android/src/: Asset.cpp  AssetManager.cpp  AssimpIOStream.cpp  AssimpIOSystem.cpp  Color.cpp  GLBuffer.cpp  GLFunctions.cpp  GLShader.cpp  GLShaderProgram.cpp  GLTexture.cpp  GLVertexArrayObject.cpp  Image.cpp  ImageDecoder.cpp  Log.cpp
platform/android/src/include/openge/: AssimpIOStream.hpp  AssimpIOSystem.hpp  ImageDecoder.hpp
platform/pc/: CMakeLists.txt
platform/pc/include/openge/: AssimpIOSystem.hpp  InputSystem.hpp  KeyEvent.hpp  Window.hpp
platform/pc/src/: GLShader.cpp  Image.cpp  Window.cpp
platform/qt/: CMakeLists.txt
platform/qt/include/openge/: Color.hpp  Event.hpp  File.hpp  GLBuffer.hpp  GLFunctions.hpp  GLShader.hpp  GLShaderProgram.hpp  GLShaderProgramImpl.hpp  GLTexture.hpp  GLVertexArrayObject.hpp  IODevice.hpp  Image.hpp  KeyEvent.hpp  MouseEvent.hpp  QtOpenGLFactory.hpp  QtShader.hpp  UI.hpp
platform/qt/src/: AssimpIOStream.cpp  AssimpIOSystem.cpp  GLShaderProgram.cpp  GLTexture.cpp  QtOpenGLFactory.cpp  QtShader.cpp
platform/qt/src/openge/: AssimpIOStream.hpp  AssimpIOSystem.hpp
shader/: Skybox.frag.in  Skybox.vert.in  Standard.frag.in  Standard.vert.in
src/: AssimpIOSystem.cpp  Camera.cpp  Color.cpp  ColorConstants.cpp  Component.cpp  CoordinateSystem.cpp  Exception.cpp  GLBuffer.cpp  GLShader.cpp  GLShaderProgram.cpp  GLTexture.cpp  GLVertexArrayObject.cpp  GameObject.cpp  Image.cpp  InputSystem.cpp  Light.cpp  Lua.cpp  Material.cpp  Mesh.cpp  RenderPipeline.cpp.in  Skybox.cpp  Transform.cpp
src/include/openge/: AssimpIOStream.hpp  AssimpIOSystem.hpp
test/: CMakeLists.txt
test/include/openge/test/: VecNear.hpp  Vector.hpp
test/src/: TestException.cpp  TestGameObject.cpp  TestInputSystem.cpp  TestLua.cpp  TestTransform.cpp
test_package/: CMakeLists.txt  CPPLINT.cfg  conanfile.py
test_package/src/: example.cpp
